package edu.hitsz.factory;

import edu.hitsz.aircraft.EnemyAircraft;
import edu.hitsz.application.Main;

import java.util.Random;

public class EnemySimpleFactory {

    private static final Random RANDOM = new Random();
    private static final int HP_DOUBLE_INTERVAL = 1500;
    private static final int BOSS_HP = 20000;

    private static final EnemyFactory MOB_FACTORY = new MobEnemyFactory();
    private static final EnemyFactory ELITE_FACTORY = new EliteEnemyFactory();
    private static final EnemyFactory ELITE_PLUS_FACTORY = new ElitePlusEnemyFactory();
    private static final EnemyFactory ELITE_PRO_FACTORY = new EliteProEnemyFactory();
    private static final EnemyFactory BOSS_FACTORY = new BossEnemyFactory();

    private EnemySimpleFactory() {
    }

    public static EnemyAircraft createBoss() {
        return BOSS_FACTORY.createEnemy(Main.WINDOW_WIDTH / 2, 0, 3, 0, BOSS_HP);
    }

    public static EnemyAircraft createEnemy(int gameTime, boolean bossPresent) {
        int type = RANDOM.nextInt(100);
        int locationX = RANDOM.nextInt(Main.WINDOW_WIDTH);
        int hpMultiplier = 1 << Math.min(10, gameTime / HP_DOUBLE_INTERVAL);

        EnemyFactory factory = selectFactory(type, bossPresent);
        return factory.createEnemy(locationX, 0, 0, speedFor(factory), hpFor(factory, hpMultiplier));
    }

    private static EnemyFactory selectFactory(int type, boolean bossPresent) {
        if (bossPresent) {
            if (type < 78) {
                return MOB_FACTORY;
            }
            if (type < 86) {
                return ELITE_FACTORY;
            }
            if (type < 93) {
                return ELITE_PLUS_FACTORY;
            }
            return ELITE_PRO_FACTORY;
        }

        if (type < 50) {
            return MOB_FACTORY;
        }
        if (type < 70) {
            return ELITE_FACTORY;
        }
        if (type < 85) {
            return ELITE_PLUS_FACTORY;
        }
        return ELITE_PRO_FACTORY;
    }

    private static int speedFor(EnemyFactory factory) {
        if (factory instanceof ElitePlusEnemyFactory) {
            return 6;
        }
        if (factory instanceof EliteEnemyFactory || factory instanceof EliteProEnemyFactory) {
            return 5;
        }
        return 4;
    }

    private static int hpFor(EnemyFactory factory, int hpMultiplier) {
        if (factory instanceof EliteEnemyFactory) {
            return 70 * hpMultiplier;
        }
        if (factory instanceof ElitePlusEnemyFactory) {
            return 80 * hpMultiplier;
        }
        if (factory instanceof EliteProEnemyFactory) {
            return 100 * hpMultiplier;
        }
        return 30 * hpMultiplier;
    }
}
