package edu.hitsz.factory;

public enum SupplyType {
    BLOOD,
    FIRE,
    FIRE_PLUS,
    BOMB,
    FREEZE
}
